--- a/style.css
+++ b/style.css
@@ -48,15 +48,25 @@ table {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
 	display: block;
 }
+
+
+
+
 body {
 	font: 12px/18px Arial, sans-serif;
-	width: 100%;
-	background-image:
+	background-image: url("img/bg.jpg");
 }
+
+.banner {
+	background-image: url("img/banner.jpg");
+	background-repeat: no-repeat;
+	background-position: center 0px;
+}
+
+
 .wrapper {
-	width: 800px;
+	width: 1170px;
 	margin: 0 auto;
-	
 }
 
 
@@ -64,13 +74,80 @@ body {
 -----------------------------------------------------------------------------*/
 .header {
 	height: 79px;
-	background: #FFE680;
+	width: 1170px;
+	background-image: url(img/header.png);
 }
 
+
+.bannertxt {
+	height: 442px;
+}
 
 /* Middle
 -----------------------------------------------------------------------------*/
 .content {
+	height: auto;
+	width: 1300px;
+}
+
+.cont1 {
+	width: 585px;
+	height: 336px;
+	float: left;
+	background-image: url(img/content/row11.png);
+}
+
+.cont2 {
+	width: 585px;
+	height: 336px;
+	float: left; 
+	background-image: url(img/content/row12.png);
+}
+.cont3 {
+	width: 585px;
+	height: 336px;
+	float: left;
+	background-image: url(img/content/row21.png);
+}
+.cont4 {
+	width: 585px;
+	height: 336px;
+	float: left;
+	background-image: url(img/content/row22.png);
+}
+
+
+
+.contxt {
+	text-align: center;
+}
+
+.conthr {
+	clear: left;
+}
+
+.fi {
+	width: 370px;
+	height: 497px;
+	float: left;
+	margin-right: 30px;
+	background-image: url(img/content2/first.jpg);
+}
+
+
+.se {
+	width: 370px;
+	height: 497px;
+	float: left;
+	margin-right: 30px;
+	background-image: url(img/content2/second.jpg);
+}
+
+.th {
+	width: 370px;
+	height: 497px;
+	float: left;
+	background-image: url(img/content2/third.jpg);
 }
 
 
@@ -79,6 +156,8 @@ body {
 /* Footer
 -----------------------------------------------------------------------------*/
 .footer {
+	clear: left;
+	width: 1920px;
 	height: 200px;
-	background: #BFF08E;
+	background-image: url(img/footer.png);
 }
