--- a/style.css
+++ b/style.css
@@ -78,19 +78,69 @@ body {
 	background-image: url(img/header.png);
 }
 
+
 .logo {
-	margin: 30px;
-	float: left;
+	font-family: 'Fjalla One', sans-serif;
+	font-size: 20px;
+	color: white;
+	padding: 30px;
+	height: 79px;
+}
+	
+.tdf {
+	width: 870px; 
+	cellpadding: 30px;
+}
+	
+.tds {
+	font-size: 15px;	
 }
 
-nav {
-	margin: 30px;
-	float: left;
+
+a:link {
+	text-decoration: none;
+	padding-top: 30px;
+	padding-bottom: 30px;
+	color: white;
+}
+
+a:active{
+	text-decoration: none;
+	color: white;
+}
+
+a:visited {
+	text-decoration: none;
+	color: white;
+}
+
+a:hover {
+	text-decoration: none;
+	color: white;
+	background: black
+}
+h1 {
+	font-size: 48px;
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
+}
+
+h2 {
+	font-size: 36px;
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
+	padding-top: 40px;
+	padding-bottom: 20px;
 }
 
 .bannertxt {
-	height: 442px;
+	margin-top: 13%;
+	margin-bottom: 13%;
+	margin-left: 15%;
+	margin-right: 15%;
+	text-align: center;
 }
+
 
 a.button1 {
   display: inline-block;
@@ -121,28 +171,40 @@ a.button1:active {
 }
 
 .cont1 {
-	width: 585px;
-	height: 336px;
-	float: left;
+	text-align: center;
+	max-width: 585px;
+	max-height: 336px;
 	background-image: url(img/content/row11.png);
+	
+}
+
+.ctxt1 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	margin-left: 10px;
+}
+
+h3 {
+	font-size: 24px;
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
+	padding: 20px;
 }
 
 .cont2 {
 	width: 585px;
 	height: 336px;
-	float: left; 
 	background-image: url(img/content/row12.png);
 }
 .cont3 {
 	width: 585px;
 	height: 336px;
-	float: left;
 	background-image: url(img/content/row21.png);
 }
 .cont4 {
 	width: 585px;
 	height: 336px;
-	float: left;
 	background-image: url(img/content/row22.png);
 }
 
