--- a/style.css
+++ b/style.css
@@ -50,7 +50,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 }
 
 
+@font-face{
+	font-family: 'Fjalla One';
+	src: url(fonts/FjallaOne/FjallaOne-Regular.eot);
+	src: url(fonts/FjallaOne/FjallaOne-Regular.ttf);
+}
 
+@font-face{
+	font-family: 'Source Sans Pro';
+	src: utl(fonts/SourceSansPro/SourceSansPro-Regular.eot);
+	src: utl(fonts/SourceSansPro/SourceSansPro-Regular.ttf);
+}
 
 body {
 	font: 12px/18px Arial, sans-serif;
