--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 body {
 	font: 12px/18px Arial, sans-serif;
 	background-image: url("img/bg.jpg");
+	min-width: 1170px;
 }
 
 .banner {
@@ -457,19 +458,6 @@ a.button4:active {
 	width: 600px;
 }
 
-textarea {
-	font-size: 16px;
-	color: white;
-	width: 566px;
-	height: 123px;
-	resize: none;
-	background:	#245863;
-	border: 1px;
-	border-style: solid;
-	border-color: #397d8a;
-	margin-bottom: 30px;
-}
-
 .txt1 {
 	float: left;
 	color: white;
@@ -497,10 +485,50 @@ textarea {
 	margin-bottom: 30px;
 }
 
-.subm {
-	text-align: center;
-	margin-bottom: 90px;
+textarea {
+	font-size: 16px;
+	color: white;
+	width: 566px;
+	height: 123px;
+	resize: none;
+	background:	#245863;
+	border: 1px;
+	border-style: solid;
+	border-color: #397d8a;
+	margin-bottom: 31px;
 }
+
+.subm {
+	margin: 0 auto; 
+	height: 46px;
+	width: 102px;
+	margin-bottom: 82px;
+}
+
+.submi {
+	padding-bottom: 10px;
+	height: 46px;
+	width: 102px;
+	background: url(img/content3/sub.png);
+	background-repeat: no-repeat;
+	border: none;
+	font-size: 15px;
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
+}
+
+.submi:hover {
+	height: 46px;
+	width: 102px;
+	background: url(img/content3/sub2.png);
+	background-repeat: no-repeat;
+	border: none;
+	cursor: pointer;
+	font-size: 15px;
+	font-family: 'Fjalla One', sans-serif;
+	color: white;
+}
+
 
 
 /* Footer
