--- a/style.css
+++ b/style.css
@@ -62,21 +62,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 	src: utl(fonts/SourceSansPro/SourceSansPro-Regular.ttf);
 }
 
+
 body {
 	font: 12px/18px Arial, sans-serif;
 	background: 
-		url("img/banner.jpg") no-repeat,
-		url("img/bg.jpg");
+		url(img/banner.jpg) no-repeat center 0,
+		url(img/bg.jpg);
 	min-width: 1170px;
-	z-index: 1;
 }
-
-/*.banner {
-	background-image: url("img/banner.jpg");
-	background-repeat: no-repeat;
-	z-index: 0;
-}
-*/
 
 
 .wrapper {
