--- a/style.css
+++ b/style.css
@@ -95,19 +95,11 @@ body {
 	font-family: 'Fjalla One', sans-serif;
 	font-size: 25px;
 	color: white;
-	padding: 30px;
+	padding: 20px 0px 0px 30px;
 	height: 79px;
 	float: left;
 	margin-right: 680px;
 }
-
-/*.navigation{
-	font-family: 'Fjalla One', sans-serif;
-	font-size: 17px;
-	float: clear;
-	height: 79px;
-	padding-top: 29px;
-} */
 
 .navigation{
 	height: 79px;
@@ -121,63 +113,13 @@ body {
 }
 
 #navigation a {
-	text-decoration: none;
 	padding-right: 17px;
 	padding-left: 17px;
 }
 
 #navigation .active a {
 	color: red;
-}
-
-#navigation .hover a {
-	background: red;
 	padding-right: 17px;
-	padding-left: 17px;
-}
-
-/*a.a1:link{
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a2:link{
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a3:link{
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a4:link{
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a1:hover{
-	background: red;
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a2:hover{
-	background: red;
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a3:hover{
-	background: red;
-	padding-right: 17px;
-	padding-left: 17px;
-}
-
-a.a4:hover{
-	background: red;
-	padding-right: 17px;
-	padding-left: 17px;
 }
 
 a:link {
@@ -201,7 +143,7 @@ a:hover {
 	text-decoration: none;
 	color: white;
 	background: black
-}*/
+}
 
 
 .ss1 {
@@ -215,14 +157,13 @@ a:hover {
 	font-size: 31px;
 	font-family: 'Fjalla One', sans-serif;
 	color: white;
-	padding-top: 40px;
-	padding-bottom: 34px;
+	padding-bottom: 2px;
 	letter-spacing: 5px;
 }
 
 .bannertxt {
-	margin-top: 233px;
-	margin-bottom: 120px;
+	margin-top: 193px;
+	margin-bottom: 100px;
 	text-align: center;
 }
 
@@ -235,7 +176,7 @@ a.button1 {
 	display: inline-block;
 	color: white;
 	font-size: 17px;
-	padding-top: 16px;
+	padding-top: 13px;
 	padding-bottom: 22px;
 	border: none;
 } 
@@ -244,6 +185,7 @@ a.button1 {
 a.button1:hover { 
 	background: url(img/readmore2.png);
 	background-repeat: no-repeat;
+	text-decoration: none;
 	}
 
 
@@ -262,6 +204,7 @@ a.button1:hover {
 	font-size: 16px;
 	margin-left: 12%;
 	margin-right: 12%;
+	line-height: 1.2;
 }
 
 .cont1 {
@@ -305,7 +248,7 @@ a.button1:hover {
 }
 
 .items {
-	margin-top: 12%;
+	margin-top: 50px;
 	border-radius: 100px;
 	background-color: white;
 }
@@ -314,7 +257,7 @@ a.button1:hover {
 	font-size: 29px;
 	font-family: 'Fjalla One', sans-serif;
 	color: white;
-	padding: 20px;
+	padding-top: 20px;
 }
 
 .upper2 {
@@ -326,12 +269,13 @@ a.button1:hover {
 
 
 .chr {
+	line-height: 0.5;
 	text-align: center;
 	color: white;
 	font-size: 21px;
 	font-family: 'Fjalla One', sans-serif;
-	padding-top: 80px;
-	padding-bottom: 82px;
+	padding-top: 50px;
+	padding-bottom: 60px;
 }
 
 .chr2 {
@@ -341,6 +285,7 @@ a.button1:hover {
 	font-family: 'Fjalla One', sans-serif;
 	padding-top: 80px;
 	padding-bottom: 40px;
+	line-height: 0.1;
 }
 
 
@@ -348,7 +293,6 @@ hr.hr1 {
 	border: none;
 	height: 1px;
 	width: 121px; 
-	color: #4682B4;
 	background-color: #4682B4;
 	display: inline-block;
 	margin: 3px 20px 10px 20px;
@@ -358,15 +302,14 @@ hr.hr2 {
 	border: none;
 	height: 1px;
 	width: 81px; 
-	color: #4682B4;
 	background-color: #4682B4;
 	display: inline-block;
 	margin: 3px 23px 10px 23px;
 }
 
 .items2 {
-	margin-top: 12%;
-	margin-bottom: 12%;
+	margin-top: 50px;
+	margin-bottom: 15px;
 	border-radius: 100px;
 }
 
@@ -403,8 +346,9 @@ a.button2 {
 } 
 
 a.button2:hover {
-	background: url(img/content2/rmf2.png);
+	background: url(img/content2/rmf2.png) no-repeat;
 	cursor: pointer;
+	text-decoration: none;
 	}
 
 
@@ -430,8 +374,9 @@ a.button3 {
 } 
 
 a.button3:hover { 
-	background: url(img/content2/rms2.png);
+	background: url(img/content2/rms2.png) no-repeat;
 	cursor: pointer;
+	text-decoration: none;
 	}
 
 .th {
@@ -455,14 +400,16 @@ a.button4 {
 } 
 
 a.button4:hover { 
-	background: url(img/content2/rmt2.png);
+	background: url(img/content2/rmt2.png) no-repeat;
 	cursor: pointer;
+	text-decoration: none;
 	}
 
 .imail {
 	margin-top: 81px;
 	border-radius: 100px;
 	background-color: white;
+	margin-bottom: 10px;
 }
 
 
@@ -519,6 +466,7 @@ textarea {
 }
 
 .submi {
+	margin-top: 30px;
 	padding-bottom: 10px;
 	height: 46px;
 	width: 102px;
@@ -542,10 +490,6 @@ textarea {
 	color: white;
 }
 
-.submi:hover {
-	border: none;
-}
-
 
 /* Footer
 -----------------------------------------------------------------------------*/
@@ -558,7 +502,6 @@ textarea {
 
 .foot1{
 	padding-top: 40px;
-	padding-bottom: 20px;
 	text-align: center;
 	font-family: 'Source Sans Pro', sans-serif;
 	color: white;
@@ -584,12 +527,19 @@ textarea {
 	margin-right: 20px;
 }
 
+.last { 
+	width: 283px;
+	height: 1px;
+	border: none;
+	background-color: #4682B4;
+}
+
 .foot2{
 	text-align: center;
 	font-family: 'Source Sans Pro', sans-serif;
 	color: white;
 	font-size: 16px;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 .damn{
